--- a/src/app/search-form/search-form.component.html
+++ b/src/app/search-form/search-form.component.html
@@ -1,12 +1,13 @@
 <div class="container-fluid">
-  <h1>Welcome to the GitHub Search</h1>
+  <h1 class="card"><br /><br /><br />GitHub Search<br /><br /><br /></h1>
   <div>
-      <div class="form-group">
-          <label>Username</label>
-          <input #input type="text" placeholder="Username" name="username">
-          <button (click)="goToUrl(input.value)" class="btn btn-secondary">SEARCH</button>
-          <!-- <button (click)="accessurl()" routerLink="/display" routerLinkActive='active'>SEARCH</button> -->
-      </div>
- 
+    <div class="form-group">
+      <label>Username</label>
+      <input #input type="text" placeholder="Username" name="username" />
+      <button (click)="goToUrl(input.value)" class="btn btn-secondary">
+        SEARCH
+      </button>
+      <!-- <button (click)="accessurl()" routerLink="/display" routerLinkActive='active'>SEARCH</button> -->
+    </div>
   </div>
 </div>
