--- a/src/app/searchapp/searchapp.component.html
+++ b/src/app/searchapp/searchapp.component.html
@@ -7,18 +7,18 @@
   <table class="table table-dark">
     <thead>
       <tr class="row">
-        <th class="col-md-2">Name</th>
-        <th class="col-md-2">Followers</th>
-        <th class="col-md-2">Following</th>
-        <th class="col-md-2">Repositories</th>
+        <th class="col-md-4">Name</th>
+        <!-- <th class="col-md-2">Followers</th>
+        <th class="col-md-2">Following</th> -->
+        <th class="col-md-4">Repositories</th>
       </tr>
     </thead>
     <tbody>
       <tr class="row">
-        <td class="col-md-3">{{ User.name }}</td>
-        <td class="col-md-2">{{ User.follower }}</td>
-        <td class="col-md-2">{{ User.following }}</td>
-        <td class="col-md-2">{{ User.repo }}</td>
+        <td class="col-md-4">{{ User.name }}</td>
+        <!-- <td class="col-md-2">{{ User.follower }}</td>
+        <td class="col-md-2">{{ User.following }}</td> -->
+        <td class="col-md-4">{{ User.repo }}</td>
       </tr>
     </tbody>
   </table>
@@ -34,7 +34,7 @@
  
 <div *ngFor='let l of Repository'>
    
-  <p id="nam">{{l.name}} <br></p> 
+  <p id="nam" appStrikethrough>{{l.name|caps}} <br></p> 
   <div id="des">{{l.description}}</div>
  
 </div>
