--- a/src/app/searchapp/searchapp.component.html
+++ b/src/app/searchapp/searchapp.component.html
@@ -35,7 +35,7 @@
 <div *ngFor='let l of Repository'>
    
   <p id="nam" appStrikethrough>{{l.name|caps}} <br></p> 
-  <div id="des">{{l.description}}</div>
+  <div id="des" appStrikethrough>{{l.description}}</div>
  
 </div>
 </div>
