--- a/src/app/search-form/search-form.component.html
+++ b/src/app/search-form/search-form.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
-  <h1 class="card"><br /><br /><br />GitHub Search<br /><br /><br /></h1>
+  <h1><br /><br /><br />GitHub Search<br /><br /><br /></h1>
   <div>
     <div class="form-group">
-      <label>Username</label>
+      <!-- <label>Username</label> -->
       <input #input type="text" placeholder="Username" name="username" />
       <button (click)="goToUrl(input.value)" class="btn btn-secondary">
         SEARCH
